--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Ofir's Quiz Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="general.css">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -16,16 +19,23 @@
     <div class="container">
         <div class="box">
 
-            <h1 class="heading">Welcome to Ofir's quizzes</h1>
-            <h2 class="heading">Enter your name to continue</h2>
-            <div style="margin: auto;" class="col-md-4 mb-3 mt-3">
-                <input type="text" class="form-control" id="firstName" placeholder="John" required
-                       pattern="[A-Za-z]{1,10}" maxlength="10" name="firstName">
+                <img style="width: 50%; margin-left: auto; margin-right: auto; display: block;" src="images/logo.png" alt="">
+                <div style="margin: auto;" class="col-md-4 mb-3 mt-3">
+                    <form>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="name" placeholder="Enter your name"
+                                pattern="[A-Za-z]{1,10}" required>
+                            <label for="name">Enter your name</label>
+                        </div>
 
-            </div>
-            <button name="user-signup" class="btn-log btn btn-dark mt-4 mb-3" type="submit">
-                Join
-            </button>
+                        <button style="display: block; margin: auto;"
+                            class="btn-quiz mt-4 mb-3" type="submit">
+                            Go
+                        </button>
+
+                    </form>
+                </div>
+
         </div>
 
     </div>
@@ -38,14 +48,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-<script>
-
-
-
-
-
-
-</script>
-
+<script src="js/index.js"></script>
 
 </html>
